--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div class="site-blocks-cover overlay" data-aos="fade" id="home-section">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/home"> <img src="/src/_assets/LogoLern.svg" class="logo" alt=""></a>
-            <form class="nav_search form-inline my-2 my-lg-0">
+            <form class="nav_search form-inline my-2 my-lg-0 col-lg-4 col-md-7 col-sm-8 col-xs-1">
                 <input class="form-control mr-sm-2 bg-transparent col-lg-7 text-white" type="search"
                     placeholder="What do you want to learn?" aria-label="Search">
                 <button class="btn btn-outline-primary my-sm-0 bg-transparent text-white col-lg-1 col-md-1 col-sm-1"
@@ -45,7 +45,7 @@
                 </ul>
             </div>
         </nav>
-<div id="app"></div>
+        <div id="app"></div>
         <div class="container mt-auto">
             <div class="intro row align-items-center justify-content-center w-100 pt-5 mt-5">
                 <div class="col-md-10 col-lg-5 col-sm-12 text-center top mr-auto inner">
