--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/styles.css">
-    <script src="./index.js"></script>
+    <link rel="stylesheet" href="/src/styles.css">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
 </head>
 
@@ -22,10 +22,10 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="/home"> <img src="/src/_assets/LogoLern.svg" class="logo" alt=""></a>
             <form class="nav_search form-inline my-2 my-lg-0 col-lg-4 col-md-7 col-sm-8 col-xs-1">
-                <input class="form-control mr-sm-2 bg-transparent col-lg-7 text-white" type="search"
+                <input class="form-control mr-sm-2 bg-transparent col-lg-7 text-white" type="search" id="search"
                     placeholder="What do you want to learn?" aria-label="Search">
                 <button class="btn btn-outline-primary my-sm-0 bg-transparent text-white col-lg-1 col-md-1 col-sm-1"
-                    type="submit"><i class="fas fa-search"></i></button>
+                    type="submit" value="search"><i class="fas fa-search"></i></button>
             </form>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,9 +45,12 @@
                 </ul>
             </div>
         </nav>
+        <ul id="results"></ul>
         <div id="app"></div>
         <div class="container mt-auto">
+
             <div class="intro row align-items-center justify-content-center w-100 pt-5 mt-5">
+
                 <div class="col-md-10 col-lg-5 col-sm-12 text-center top mr-auto inner">
                     <h1 class="text-left banner">Technologie jutra</h1>
                     <p class="pt-5 pb-5 text-left intro_content">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -60,10 +63,7 @@
             </div>
         </div>
     </div>
-
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -72,6 +72,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+        <script src="/src/youtube.js"></script>
+        <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script> 
+        <script src="https://apis.google.com/js/client.js?onload=init"></script>
+        <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
 </body>
 
 </html>
