--- a/src/video.html
+++ b/src/video.html
@@ -1,4 +1,6 @@
-<div class="item">
-        <h2>{{title}}</h2>
-        <iframe class="video w100" width="540" height="310" src="//www.youtube.com/embed/{{videoid}}" frameborder="0" allowfullscreen></iframe>
-    </div>
+<link rel="stylesheet" href="/src/video.css">
+<div class="results col-lg-5 col-md-8 col-xs-10">
+<h2 class="video-title">{{title}}</h2>
+                <iframe class="video w100" src="//www.youtube.com/embed/{{videoid}}"
+                    frameborder="0" allowfullscreen></iframe>
+</div>
